--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@
 spring:
 
   profiles:
-    active: dev
+    active: ${SPRING_PROFILES_ACTIVE}
 
   application:
     name: SchoolRanking
@@ -11,9 +11,9 @@ spring:
 
 
   datasource:
-    url: jdbc:postgresql://localhost:5444/SchoolRanking
-    username: tigana
-    password: password
+    url: jdbc:postgresql://db:5432/schoolranking_dev
+    username: postgres
+    password: your_secure_password_here
     driver-class-name: org.postgresql.Driver
 
   jackson:
