--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   datasource:
     url: jdbc:postgresql://db:5432/schoolranking_dev
     username: postgres
-    password: your_secure_password_here
+    password: postgres
     driver-class-name: org.postgresql.Driver
 
   jackson:
@@ -25,9 +25,9 @@ spring:
       # format_sql: true
      
     # show-sql: true
-    # properties:
-    #   hibernate:
-    #     dialect: org.hibernate.dialect.PostgreSQLDialect        #This tells Hibernate (the ORM used by Spring Data JPA) how to generate SQL statements that are optimized for PostgreSQL.
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect        #This tells Hibernate (the ORM used by Spring Data JPA) how to generate SQL statements that are optimized for PostgreSQL.
 
 server:
   servlet:
