--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     
   jpa: 
     hibernate:
-      ddl-auto: update 
+      ddl-auto: create-drop 
       # format_sql: true
      
     # show-sql: true
